<resources>
    <string name="app_name">ADBOEK</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">Logo</string>
    <string name="login">Login</string>
    <string name="logIn">Login</string>
    <string name="verification_code">Verification Code</string>
    <string name="type_otp">Type your OTP here</string>

    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="confirmPassword">CONFIRM PASSWORD</string>

    <string name="tv_forgot_password">Forgot your password?</string>
    <string name="login_fb">LOGIN WITH FACEBOOK</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="sign_up"><u>Sign up</u></string>
    <string name="signup">Sign up</string>

    <string name="login_u"><u>Login</u></string>
    <string name="email_address">EMAIL ADDRESS</string>

    <string name="or">OR</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="sign_up_below">Please Sign up below</string>
    <string name="title_activity_home">Profile</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="update_profile">Update Profile</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="basic_details">PERSONAL DETAILS</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="marital_status">Marital Status</string>
    <string name="dob">DD/MM/YYYY</string>
    <string name="next">NEXT</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="professional_detail">PROFESSIONAL DETAILS</string>
    <string name="organization">Organization Name</string>
    <string name="designation">Designation</string>
    <string name="category">Category</string>
    <string name="working_since">Working Since</string>
    <string name="current_address">ADDRESS</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="province">Province</string>
    <string name="zip">Zip/Postal Code</string>
    <string name="address">Address</string>
    <string name="street">Street</string>

    <string name="submit">SUBMIT</string>
    <string name="Otp_wrong">Oops!! Wrong OTP</string>
    <string name="about_me">ABOUT ME</string>
    <string name="about">ABOUT</string>

    <string name="about_about_youself">Enter about yourself...</string>
    <string name="tv_no_of_char">0/250</string>
    <string name="first_name">First Name</string>
    <string name="contact">Contact</string>
    <string name="primary">Primary Phone</string>
    <string name="secondary">Secondary Phone</string>

    <string name="email">Email</string>
    <string name="skype">Skype</string>
    <string name="login_cancled">Login Cancelled</string>
    <string name="description">Description</string>
    <string name="search_result">SEARCH RESULT</string>
    <string name="keyword">Keywords</string>
    <string name="go">GO</string>
    <string name="contact_detail">CONTACT DETAILS</string>
    <string name="secondary_email">Secondary email</string>
    <string name="mobile_no_1">Mobile No. 1.</string>
    <string name="phone">Phone No</string>
    <string name="phone_no">9999999999</string>

    <string name="mobile_no_2">Mobile No. 2.</string>
    <string name="skype_id">Skype ID</string>
    <string name="profile">Profile</string>
    <string name="updateprofile">Update Profile</string>

    <string name="selectMarital_status">Please select marital status</string>
    <string name="select_category">Please select category</string>



    <string name="enter_dob">Please enter date of birth</string>
    <string name="select_gender">Please select your gender</string>

    <string-array name="gender">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>

    </string-array>

    <string name="gender_prompt">Gender</string>
    <string-array name="marital_status">
        <item>Marital Status</item>
        <item>Single</item>
        <item>Married</item>
        <item>Widowed</item>
        <item>Separated</item>
        <item>Divorced</item>


    </string-array>
    <string-array name="category">
        <item>Category</item>


    </string-array>
    <string-array name="country">
        <item>Country</item>
        <item>India</item>

    </string-array>

    <string-array name="state">
        <item>State</item>
        <item>Delhi</item>

    </string-array>
    <string name="facebook_app_id">248148885702445</string>
    <string name="password_validate">Password and Confirm Password should be match</string>
    <string name="select_state">Please select state</string>
    <string name="select_country">Please select country</string>
    <string name="select_catogary">select category</string>
    <string name="select_city">select city</string>

    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="upload_image">Upload</string>
    <string name="edit">Edit</string>
    <string name="password_ed">Password</string>
    <string name="home">HOME</string>
    <string name="search">Search</string>

    <string name="email_required">Email ID required</string>
    <string name="internet_issue">Oops!! No network</string>
    <string name="EMAIL">EMAIL</string>
    <string name="name">Name</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="otp_send_successfully">OTP sent successfully</string>

    <string name="find_people">Find People</string>
    <string name="slow_network">Due to slow connection there is some problem. please try again</string>
    <string name="enter_country_code">Please enter country code</string>
    <string name="valid_phone">Please enter 10 digit mobile number</string>
    <string name="search_validate_msg">Please provide minimum 3 characters for search </string>
</resources>
