<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="com.softmine.dooktravel.fragments.FragmentLogin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="7">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/logo"
                android:textColor="@color/white" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:textSize="14sp"
                android:text="@string/sign_up_below"
                android:textColor="@color/white" />

            <LinearLayout
                android:id="@+id/ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/back_rounded_corner"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/ed_layout_username"
                        android:layout_width="match_parent"
                        android:layout_marginTop="10dp"

                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email_address"
                            android:lines="1"
                            android:textColorHint="@color/black"
                            android:textSize="14sp" />
                    </android.support.design.widget.TextInputLayout>



                    <Button
                        android:id="@+id/btnSignUp"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/button_green"
                        android:text="@string/signup"
                        android:textSize="16sp"
                        android:textColor="@color/white" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="2dp"
                        android:text="@string/or"
                        android:textSize="14sp" />

                    <Button
                        android:id="@+id/btnfb"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="2dp"
                        android:textSize="16sp"
                        android:background="@drawable/button_blue"
                        android:text="@string/login_fb"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/tv_already_have_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_account"
                    android:textColor="@color/blue2"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/tv_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:text="@string/login_u"
                    android:textSize="14sp"
                    android:textColor="@color/white" />
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>
