<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.softmine.dooktravel.fragments.FragmentBasicDetail">
    <ImageView
        android:id="@+id/imgProfile"
        android:scaleType="fitXY"
        android:background="@color/grey"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/man" />
    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_below="@id/imgProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout

            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">




            <LinearLayout
                android:id="@+id/ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/back_basic_detail"
                android:gravity="center"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ed_layout_firstName"
                    android:layout_width="match_parent"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edFirstname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name"
                        android:lines="1"
                        android:textColor="@color/pilot"
                        android:textSize="14sp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ed_layout_MiddleName"
                    android:layout_width="match_parent"
                    android:textColorHint="@color/black"

                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edMiddleName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:hint="@string/middle_name"
                        android:lines="1"
                        android:textColor="@color/pilot"

                        android:textSize="14sp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ed_layout_LastName"
                    android:layout_width="match_parent"
                    android:textColorHint="@color/black"
                    android:layout_height="wrap_content">


                    <EditText
                        android:id="@+id/edlastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:hint="@string/last_name"

                        android:lines="1"
                        android:textColor="@color/pilot"

                        android:textSize="14sp" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ed_layout_address"
                    android:layout_width="match_parent"
                    android:textColorHint="@color/black"
                    android:layout_height="wrap_content">


                    <EditText
                        android:id="@+id/edAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:hint="@string/address"
                        android:textColor="@color/pilot"

                        android:lines="1"
                        android:textSize="14sp" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ed_layout_email"
                    android:layout_width="match_parent"
                    android:textColorHint="@color/black"

                    android:layout_height="wrap_content">


                </android.support.design.widget.TextInputLayout>



                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ed_layout_contact"
                    android:layout_width="match_parent"
                    android:textColorHint="@color/black"
                    android:layout_height="wrap_content">


                    <EditText
                        android:id="@+id/edContact"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:hint="@string/contact"

                        android:lines="1"
                        android:textColor="@color/pilot"
                        android:textSize="14sp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ed_layout_skype"
                    android:layout_width="match_parent"
                    android:textColorHint="@color/black"
                    android:layout_height="wrap_content">


                    <EditText
                        android:id="@+id/edSkype"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:hint="@string/skype"

                        android:lines="1"
                        android:textColor="@color/pilot"

                        android:textSize="14sp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ed_layout_description"
                    android:layout_width="match_parent"
                    android:textColorHint="@color/black"
                    android:layout_height="wrap_content">


                    <EditText
                        android:id="@+id/edDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:hint="@string/description"

                        android:lines="1"
                        android:textColor="@color/pilot"

                        android:textSize="14sp" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</RelativeLayout>
